Adding chckDiff manually

--- a/testapi.yaml
+++ b/testapi.yaml
@@ -24,6 +24,10 @@ paths:
           in: "query"
           required: false
           type: "string"
+        - name: "checkDiff"
+          in: "query"
+          required: false
+          type: "string"
       responses:
         "200":
           description: "successful operation"
